continue previous work

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,7 +11,7 @@
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
   
@@ -52,10 +52,6 @@
 	<!-- CSS Theme -->
 	<link rel="stylesheet" href="assets/css/theme-colors/default.css" id="style_color">
 	<link rel="stylesheet" href="assets/css/theme-skins/dark.css">
-
-	<!-- CSS Customization -->
-  <link rel="stylesheet" href="assets/css/custom.css">
-
 </head>
 <body class="header-fixed">
 
@@ -93,9 +89,5 @@
     <script src="assets/plugins/html5shiv.js"></script>
     <script src="assets/plugins/placeholder-IE-fixes.js"></script>
   <![endif]-->
-
-  <!-- JS Customization -->
-  <script type="text/javascript" src="assets/js/custom.js"></script>
-
 </body>
 </html>
